--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
             box-shadow: 0 2px 5px rgba(0,0,0,0.05);
         }
 
+        .historical-section {
+            background: #f8f9fa;
+            padding: 2rem 0;
+            border-top: 1px solid #dee2e6;
+            border-bottom: 1px solid #dee2e6;
+        }
+
         .filter-section {
             display: flex;
             gap: 1rem;
@@ -254,6 +261,126 @@
         .read-more:hover {
             transform: translateY(-1px);
             box-shadow: 0 3px 10px rgba(102, 126, 234, 0.4);
+        }
+
+        /* Bias Detection Styling */
+        .bias-indicator {
+            display: flex;
+            gap: 0.5rem;
+            align-items: center;
+            margin-bottom: 0.75rem;
+            padding: 0.5rem;
+            background: #f8f9fa;
+            border-radius: 6px;
+            font-size: 0.85rem;
+        }
+
+        .bias-label {
+            padding: 0.2rem 0.5rem;
+            border-radius: 12px;
+            font-size: 0.75rem;
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+        }
+
+        .bias-label.left, .bias-label.left-lean { background: #e3f2fd; color: #1565c0; }
+        .bias-label.center, .bias-label.center-left, .bias-label.center-right { background: #f3e5f5; color: #7b1fa2; }
+        .bias-label.right, .bias-label.right-lean { background: #ffebee; color: #c62828; }
+        .bias-label.unknown { background: #f5f5f5; color: #757575; }
+
+        .reliability-score {
+            font-size: 0.8rem;
+        }
+
+        .left-bias { color: #1565c0; font-weight: 600; }
+        .right-bias { color: #c62828; font-weight: 600; }
+        .center-bias { color: #7b1fa2; font-weight: 600; }
+        .unknown { color: #757575; }
+
+        /* Story Grouping Styling */
+        .story-group {
+            background: white;
+            border-radius: 12px;
+            overflow: hidden;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.08);
+            margin-bottom: 2rem;
+        }
+
+        .story-header {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            padding: 1.5rem;
+        }
+
+        .story-title {
+            font-size: 1.3rem;
+            font-weight: 700;
+            margin-bottom: 0.5rem;
+        }
+
+        .story-meta {
+            font-size: 0.9rem;
+            opacity: 0.9;
+            margin-bottom: 0.75rem;
+        }
+
+        .bias-spread {
+            display: flex;
+            gap: 0.5rem;
+            flex-wrap: wrap;
+        }
+
+        .bias-tag {
+            padding: 0.25rem 0.5rem;
+            border-radius: 8px;
+            font-size: 0.7rem;
+            font-weight: 600;
+            text-transform: uppercase;
+            background: rgba(255,255,255,0.2);
+            color: white;
+        }
+
+        .story-articles {
+            padding: 1rem;
+            display: grid;
+            gap: 1rem;
+        }
+
+        .grouped-article-card {
+            background: #f8f9fa;
+            border-radius: 8px;
+            padding: 1rem;
+            cursor: pointer;
+            transition: all 0.3s;
+            border-left: 4px solid #dee2e6;
+        }
+
+        .grouped-article-card:hover {
+            background: #e9ecef;
+            transform: translateX(5px);
+            border-left-color: #667eea;
+        }
+
+        .grouped-article-title {
+            font-size: 1rem;
+            font-weight: 600;
+            margin-bottom: 0.5rem;
+            color: #2d3748;
+        }
+
+        .grouped-article-meta {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 0.5rem;
+            font-size: 0.8rem;
+        }
+
+        .grouped-article-description {
+            color: #666;
+            font-size: 0.85rem;
+            line-height: 1.4;
         }
 
         .status-info {
@@ -562,4 +689,3 @@
         });
     </script>
 </body>
-</html>
