--- a/index.html
+++ b/index.html
@@ -263,40 +263,25 @@
             box-shadow: 0 3px 10px rgba(102, 126, 234, 0.4);
         }
 
-        /* Bias Detection Styling */
-        .bias-indicator {
-            display: flex;
-            gap: 0.5rem;
-            align-items: center;
-            margin-bottom: 0.75rem;
-            padding: 0.5rem;
-            background: #f8f9fa;
-            border-radius: 6px;
-            font-size: 0.85rem;
-        }
-
-        .bias-label {
+        /* Simple Bias Tags Styling */
+        .bias-tag {
+            display: inline-block;
             padding: 0.2rem 0.5rem;
             border-radius: 12px;
             font-size: 0.75rem;
             font-weight: 600;
             text-transform: uppercase;
             letter-spacing: 0.5px;
+            margin-left: 0.5rem;
         }
 
-        .bias-label.left, .bias-label.left-lean { background: #e3f2fd; color: #1565c0; }
-        .bias-label.center, .bias-label.center-left, .bias-label.center-right { background: #f3e5f5; color: #7b1fa2; }
-        .bias-label.right, .bias-label.right-lean { background: #ffebee; color: #c62828; }
-        .bias-label.unknown { background: #f5f5f5; color: #757575; }
-
-        .reliability-score {
-            font-size: 0.8rem;
-        }
-
-        .left-bias { color: #1565c0; font-weight: 600; }
-        .right-bias { color: #c62828; font-weight: 600; }
-        .center-bias { color: #7b1fa2; font-weight: 600; }
-        .unknown { color: #757575; }
+        .bias-tag.left { background: #1976d2; color: white; }
+        .bias-tag.left-lean { background: #42a5f5; color: white; }
+        .bias-tag.center-left { background: #66bb6a; color: white; }
+        .bias-tag.center { background: #9c27b0; color: white; }
+        .bias-tag.center-right { background: #ff9800; color: white; }
+        .bias-tag.right-lean { background: #f44336; color: white; }
+        .bias-tag.right { background: #d32f2f; color: white; }
 
         /* Story Grouping Styling */
         .story-group {
@@ -689,3 +674,4 @@
         });
     </script>
 </body>
+</html>
