--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
   />
   <title>Spectrum News — Clean</title>
 
-  <!-- Optional: Roboto font (safe to remove if you prefer system fonts) -->
+  <!-- Optional: Roboto font -->
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
     rel="stylesheet"
   />
 
   <style>
-    /* ====== CLEAN WHITE THEME (from your target design) ====== */
     :root {
       --primary-color: #3478F6;
       --secondary-color: #FF5733;
@@ -43,7 +42,6 @@
     }
 
     .container { max-width: 1200px; margin: 0 auto; padding: 0 15px; }
-
     a { text-decoration: none; color: inherit; }
     ul { list-style: none; }
     button { cursor: pointer; border: none; background: none; font-family: inherit; }
@@ -74,11 +72,6 @@
       border-radius: 20px; font-weight: 500;
     }
 
-    .auth .sign-in {
-      background-color: var(--primary-color);
-      color: white; padding: 8px 14px; border-radius: var(--border-radius); font-weight: 500;
-    }
-
     /* Main */
     main { padding: 18px 0; }
     main .container { display: flex; gap: 20px; }
@@ -90,14 +83,9 @@
     }
 
     .filter-section { margin-bottom: 22px; }
-    .filter-section h2 {
-      font-size: 18px; margin-bottom: 12px; color: var(--dark-gray);
-    }
-    .filter-section h3 {
-      font-size: 14px; margin: 12px 0 8px; color: var(--dark-gray);
-    }
+    .filter-section h2 { font-size: 18px; margin-bottom: 12px; color: var(--dark-gray); }
+    .filter-section h3 { font-size: 14px; margin: 12px 0 8px; color: var(--dark-gray); }
 
-    /* Basic selects */
     .select {
       width: 100%; padding: 10px 12px; border: 1px solid var(--medium-gray);
       border-radius: var(--border-radius); background: #fff; font-size: 14px;
@@ -144,27 +132,19 @@
       background: var(--primary-color);
       animation: pulse 1.8s ease-in-out infinite;
     }
-    @keyframes pulse {
-      0% { transform: scale(1); opacity: 0.8; }
-      50% { transform: scale(1.25); opacity: 1; }
-      100% { transform: scale(1); opacity: 0.8; }
-    }
+    @keyframes pulse { 0% { transform: scale(1); opacity: 0.8; } 50% { transform: scale(1.25); opacity: 1; } 100% { transform: scale(1); opacity: 0.8; } }
 
     /* View options */
     .view-options {
       display: flex; background: #fff; border-radius: var(--border-radius); box-shadow: var(--box-shadow);
       overflow: hidden; margin-bottom: 16px;
     }
-    .view-option {
-      padding: 10px 16px; font-weight: 500; transition: background-color 0.15s; flex: 0 0 auto;
-    }
+    .view-option { padding: 10px 16px; font-weight: 500; transition: background-color 0.15s; flex: 0 0 auto; }
     .view-option:hover { background: var(--light-gray); }
     .view-option.active { background: var(--primary-color); color: #fff; }
 
     /* News grid */
-    #news-container {
-      display: grid; grid-template-columns: 1fr; gap: 16px;
-    }
+    #news-container { display: grid; grid-template-columns: 1fr; gap: 16px; }
     .cards-2 #news-container { grid-template-columns: repeat(2, 1fr); }
     .cards-3 #news-container { grid-template-columns: repeat(3, 1fr); }
 
@@ -182,31 +162,19 @@
     }
     .source-info { flex: 1; min-width: 0; }
     .source-name { font-weight: 600; font-size: 14px; }
-    .source-meta {
-      display: flex; gap: 8px; flex-wrap: wrap; color: #777; font-size: 12px; margin-top: 2px;
-    }
-    .reliability-badge {
-      background: #e6f7e6; color: #27ae60; padding: 2px 8px; border-radius: 999px; font-size: 12px; font-weight: 600;
-    }
-    .bias-badge {
-      background: #f2f3f4; color: #444; padding: 2px 8px; border-radius: 999px; font-size: 12px; font-weight: 600;
-    }
+    .source-meta { display: flex; gap: 8px; flex-wrap: wrap; color: #777; font-size: 12px; margin-top: 2px; }
+    .reliability-badge { background: #e6f7e6; color: #27ae60; padding: 2px 8px; border-radius: 999px; font-size: 12px; font-weight: 600; }
+    .bias-badge { background: #f2f3f4; color: #444; padding: 2px 8px; border-radius: 999px; font-size: 12px; font-weight: 600; }
 
-    .thumb {
-      width: 100%; height: 180px; object-fit: cover; background: #f2f2f2;
-    }
+    .thumb { width: 100%; height: 180px; object-fit: cover; background: #f2f2f2; }
 
     .article-content { padding: 14px; }
     .article-title { font-size: 18px; font-weight: 600; margin-bottom: 8px; color: #222; line-height: 1.35; }
-    .article-meta {
-      display: flex; justify-content: space-between; gap: 6px; color: #666; font-size: 13px; margin-bottom: 10px;
-    }
+    .article-meta { display: flex; justify-content: space-between; gap: 6px; color: #666; font-size: 13px; margin-bottom: 10px; }
     .article-description { color: #444; font-size: 14px; margin-bottom: 12px; }
 
     .article-actions { display: flex; justify-content: space-between; align-items: center; }
-    .link-btn {
-      color: var(--primary-color); font-weight: 600; padding: 8px 10px; border-radius: 6px; background: #f0f6ff;
-    }
+    .link-btn { color: var(--primary-color); font-weight: 600; padding: 8px 10px; border-radius: 6px; background: #f0f6ff; }
 
     /* Loading & error */
     .loading { text-align: center; padding: 28px; color: #666; }
@@ -248,10 +216,6 @@
           <button class="search-btn" type="submit">Search</button>
         </form>
       </div>
-
-      <div class="auth">
-        <a class="sign-in" href="#" aria-disabled="true">Sign in</a>
-      </div>
     </div>
   </header>
 
@@ -262,31 +226,6 @@
       <aside class="sidebar">
         <section class="filter-section">
           <h2>Filters</h2>
-
-          <h3>Country</h3>
-          <select id="country-select" class="select">
-            <option value="us">United States</option>
-            <option value="gb">United Kingdom</option>
-            <option value="ca">Canada</option>
-            <option value="au">Australia</option>
-            <option value="de">Germany</option>
-            <option value="fr">France</option>
-            <option value="in">India</option>
-            <option value="jp">Japan</option>
-            <option value="kr">Korea</option>
-          </select>
-
-          <h3>Language</h3>
-          <select id="language-select" class="select">
-            <option value="en">English</option>
-            <option value="es">Spanish</option>
-            <option value="fr">French</option>
-            <option value="de">German</option>
-            <option value="it">Italian</option>
-            <option value="pt">Portuguese</option>
-            <option value="ko">Korean</option>
-            <option value="ja">Japanese</option>
-          </select>
 
           <h3>Articles</h3>
           <select id="max-select" class="select">
@@ -402,9 +341,7 @@
           this.loadNews();
         });
 
-        // Basic selects
-        document.getElementById('country-select').addEventListener('change', () => this.loadNews());
-        document.getElementById('language-select').addEventListener('change', () => this.loadNews());
+        // Articles count
         document.getElementById('max-select').addEventListener('change', () => this.loadNews());
 
         // Time range (client-side filter)
@@ -425,7 +362,6 @@
           opt.addEventListener('click', () => {
             document.querySelectorAll('#bias-filter .bias-option').forEach(x => x.classList.remove('active'));
             opt.classList.add('active');
-            // no API change; reserved for future client-side filtering
           });
         });
 
@@ -458,12 +394,10 @@
 
         try {
           const q = (document.getElementById('search-input').value || 'latest news').trim();
-          const country = document.getElementById('country-select').value;
-          const lang = document.getElementById('language-select').value;
           const max = document.getElementById('max-select').value;
 
           const params = new URLSearchParams({
-            q, country, lang, max, expand: 'content'
+            q, max, expand: 'content'
           });
           if (this.currentCategory) params.set('category', this.currentCategory);
 
@@ -567,10 +501,7 @@
         `;
       }
 
-      truncate(t, n) {
-        if (!t) return '';
-        return t.length > n ? t.slice(0, n - 1) + '…' : t;
-      }
+      truncate(t, n) { if (!t) return ''; return t.length > n ? t.slice(0, n - 1) + '…' : t; }
 
       humanTime(iso) {
         if (!iso) return 'Unknown';
@@ -585,10 +516,7 @@
         return d.toLocaleDateString();
       }
 
-      initial(name) {
-        const c = (name || '').trim()[0];
-        return (c || '?').toUpperCase();
-      }
+      initial(name) { const c = (name || '').trim()[0]; return (c || '?').toUpperCase(); }
 
       escape(str) {
         return String(str || '').replace(/[&<>"']/g, s => ({
@@ -602,3 +530,4 @@
   </script>
 </body>
 </html>
+
